--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI="mongodb+srv://princeraj:eVLzHMQRLTZaqXKE@admin.kmhddu0.mongodb.net/"
+MONGODB_URI=mongodb+srv://princeraj:eVLzHMQRLTZaqXKE@admin.kmhddu0.mongodb.net/todosdb
 PORT=4000
